# browser-fingerprinting

./: .pre-commit-config.yaml  README.md  pyproject.toml
01-client/: README.md  index.html
02-server-javascript/: main.py
03-client-fingerprintjs/: index-open-source.html  index-pro.html  index.html
03-server-fingerprintjs/: main.py
03-server-fingerprintjs/static/: fingerprint.html  fingerprint.js
04-server-fingerprintjs/static/: fingerprint.html
