[project]
name = "browser-fingerprinting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "uvicorn>=0.38.0",
]

[tool.mypy]
ignore_missing_imports = false
